--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>GIVENCHY SPRING SUMMER 2021</title>
+    <link href="page/index.scss" rel="stylesheet">
 </head>
 <body>
 
