feat: added header

--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>GIVENCHY SPRING SUMMER 2021</title>
-    <link href="page/index.scss" rel="stylesheet">
+    <link href="page/index.css" rel="stylesheet">
 </head>
-<body>
-
+<body class="page">
+<header class="header">
+  <div class="header__container">
+    <h1 class="header__title">Givenchy<br> Spring Summer 2021<br> by Matthew M. Williams</h1>
+    <button class="header__button">Subscribe to collection’s news</button>
+    <img class="header__image" src="images/photo-header.jpg" alt="Photo of a man in a coat color dusty rose">
+  </div>
+</header>
 </body>
 </html>
