feat: added cards section

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <article class="about__item">
       <div class="about__quote">
         <blockquote class="about__quote-text">“In each of these portraits, a strong character wears a look that reflects who
-        they are: they’re the ones who bring the clothes to life.”main
+        they are: they’re the ones who bring the clothes to life.”
         </blockquote>
         <p class="about__quote-author">Matthew M. Williams.</p>
       </div>
@@ -54,7 +54,24 @@
 
 
 
-  <section class="cards"></section>
+  <section class="cards">
+    <h2 class="cards__title">Looks</h2>
+    <div class="cards__items">
+      <img alt="Photo of a girl in black on a light green background" class="cards__item" src="./images/photo-4.jpg">
+      <img alt="Photo of a girl in a black coat and with a black bag on a dusty rose background" class="cards__item"
+           src="./images/photo-5.jpg">
+      <img alt="Photo of a girl in sunglasses and a massive necklace on a yellow background" class="cards__item"
+           src="./images/photo-6.jpg">
+      <img alt="Photo man in black on a white background" class="cards__item" src="./images/photo-7.jpg">
+      <img alt="Photo of a girl in a light pink coat on an orange background" class="cards__item"
+           src="./images/photo-8.jpg">
+      <img alt="Photo of a girl in black on a red background" class="cards__item" src="./images/photo-9.jpg">
+      <img alt="Photo of a girl in a green sweater, transparent skirt and red leggings on a sandy background" class="cards__item"
+           src="images/photo-10.jpg">
+      <img alt="Photo of a girl in black pants, a white T-shirt and a black clutch on a blue background" class="cards__item"
+           src="images/photo-11.jpg">
+    </div>
+  </section>
 
 </main>
 </body>
