--- a/index.html
+++ b/index.html
@@ -22,32 +22,34 @@
         consciousness for Williams and is a ‘sampler’ of what is to come.</p>
     </div>
     <article class="about__item">
-      <div class="about__quote">
-        <blockquote class="about__quote-text">“To me, fashion expresses a point of view where formality and informality,
+      <div class="about__quote fade-in-right">
+        <blockquote class="about__quote-text">“To me, fashion expresses a point of view where formality and
+          informality,
         construction and comfort co-exist. My ethos is about the luxury of infusing clothes with your own personality,
         not being worn by them,”
         </blockquote>
-        <p class="about__quote-author">Matthew M. Williams.</p>
+        <p class="about__quote-author fadeInLeft">Matthew M. Williams.</p>
       </div>
-      <img class="about__image about__image_type_medium" src="./images/photo-1.jpg" alt="Photo of a woman in red with a bag of gold color">
+      <img class="about__image about__image_type_medium fade-in-left" src="./images/photo-1.jpg"
+           alt="Photo of a woman in red with a bag of gold color">
     </article>
     <article class="about__item">
-      <img class="about__image about__image_type_small" src="./images/photo-2.jpg"
+      <img class="about__image about__image_type_small fade-in-left" src="./images/photo-2.jpg"
            alt="Photo of a man in black with a big black bag">
-      <p class="about__text">Matthew M. Williams reveals his vision with help from an all-star lineup of likeminded
+      <p class="about__text fade-in-right">Matthew M. Williams reveals his vision with help from an all-star lineup of likeminded
         artists. The Creative Director called on close friends in his tight-knit community of artists. Kendall Jenner,
         Bella Hadid, Playboi Carti and the supermodels Anok Yai and Liam Powers were each invited to put their own stamp
         on key pieces, the better to highlight the importance of cultivating a powerful personal style.
       </p>
     </article>
     <article class="about__item">
-      <div class="about__quote">
+      <div class="about__quote fade-in-right">
         <blockquote class="about__quote-text">“In each of these portraits, a strong character wears a look that reflects who
         they are: they’re the ones who bring the clothes to life.”
         </blockquote>
         <p class="about__quote-author">Matthew M. Williams.</p>
       </div>
-      <img class="about__image about__image_type_large" src="./images/photo-3.jpg"
+      <img class="about__image about__image_type_large fade-in-left" src="./images/photo-3.jpg"
            alt="Photo of a woman in a beige dress with cutouts on the back and elbows">
     </article>
   </section>
