--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
   <div class="header__container">
     <h1 class="header__title">Givenchy<br> Spring Summer 2021<br> by Matthew M. Williams</h1>
     <button class="header__button">Subscribe to collection’s news</button>
+    <div class="header__menu">
+      <button class="header__menu-icon"></button>
+      <p class="header__menu-title">menu</p>
+    </div>
     <img class="header__image" src="images/photo-header.jpg" alt="Photo of a man in a coat color dusty rose">
   </div>
 </header>
@@ -92,5 +96,21 @@
     <p class="footer__copyright">&COPY; 2021, Givenchy. Some rights reserved</p>
   </div>
 </footer>
+<section class="popup">
+  <div class="popup__container">
+    <button class="popup__close" type="submit" value="закрыть"></button>
+    <ul class="popup__menu-list">
+      <li class="popup__menu-item">
+        <a class="popup__menu-link">About</a>
+      </li>
+      <li class="popup__menu-item">
+        <a class="popup__menu-link">Looks</a>
+      </li>
+      <li class="popup__menu-item">
+        <a class="popup__menu-link">Subscribe</a>
+      </li>
+    </ul>
+  </div>
+</section>
 </body>
 </html>
