feat: added media screens for tablet

--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
 <body class="page">
 <header class="header">
   <div class="header__container">
+    <img class="header__image" src="images/photo-header.jpg" alt="Photo of a man in a coat color dusty rose">
+    <img class="header__image header__image_type_tablet" src="images/photo-header-tablet.jpg"
+         alt="Photo of a man in a coat color dusty rose">
     <h1 class="header__title">Givenchy<br> Spring Summer 2021<br> by Matthew M. Williams</h1>
     <button class="header__button">Subscribe to collection’s news</button>
     <div class="header__menu">
       <button class="header__menu-icon"></button>
       <p class="header__menu-title">menu</p>
     </div>
-    <img class="header__image" src="images/photo-header.jpg" alt="Photo of a man in a coat color dusty rose">
   </div>
 </header>
 <main class="main">
@@ -69,10 +71,10 @@
       <img alt="Photo of a girl in a light pink coat on an orange background" class="cards__item"
            src="./images/photo-8.jpg">
       <img alt="Photo of a girl in black on a red background" class="cards__item" src="./images/photo-9.jpg">
-      <img alt="Photo of a girl in a green sweater, transparent skirt and red leggings on a sandy background" class="cards__item"
-           src="images/photo-10.jpg">
-      <img alt="Photo of a girl in black pants, a white T-shirt and a black clutch on a blue background" class="cards__item"
-           src="images/photo-11.jpg">
+<!--      <img alt="Photo of a girl in a green sweater, transparent skirt and red leggings on a sandy background" class="cards__item"-->
+<!--           src="images/photo-10.jpg">-->
+<!--      <img alt="Photo of a girl in black pants, a white T-shirt and a black clutch on a blue background" class="cards__item"-->
+<!--           src="images/photo-11.jpg">-->
     </div>
   </section>
 </main>
