--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1 class="header__title">Givenchy<br> Spring Summer 2021<br> by Matthew M. Williams</h1>
     <button class="header__button">Subscribe to collection’s news</button>
     <div class="header__menu">
-      <button class="header__menu-icon"></button>
+      <button class="header__menu-button"></button>
       <p class="header__menu-title">menu</p>
     </div>
   </div>
@@ -89,7 +89,7 @@
       </div>
       <div class="footer__form-item">
         <input class="footer__form-input footer__form-input_type_checkbox" id="confirm-subscription"
-                 name="confirm-subscription" type="checkbox" value="confirm subscription">
+                 name="confirm-subscription" type="checkbox" value="confirm subscription" required>
         <label class="footer__form-label"
                for="confirm-subscription">I consent to the processing of my data by GIVENCHY in accordance with the conditions set forth in the Privacy Policy
         </label>
@@ -98,21 +98,22 @@
     <p class="footer__copyright">&COPY; 2021, Givenchy. Some rights reserved</p>
   </div>
 </footer>
-<section class="popup">
+<section class="popup popup_type_menu">
   <div class="popup__container">
-    <button class="popup__close" type="submit" value="закрыть"></button>
+    <button class="popup__close" type="submit" value="close"></button>
     <ul class="popup__menu-list">
       <li class="popup__menu-item">
-        <a class="popup__menu-link" href="#about" title="go to About section">About</a>
+        <a class="popup__menu-link" title="Click to go to About section" href="#about">About</a>
       </li>
       <li class="popup__menu-item">
-        <a class="popup__menu-link" href="#looks" title="go to Look section">Looks</a>
+        <a class="popup__menu-link" href="#looks" title="Click to go to Look section">Looks</a>
       </li>
       <li class="popup__menu-item">
-        <a class="popup__menu-link" href="#subscribe" title="go to Subscribe section">Subscribe</a>
+        <a class="popup__menu-link" href="#subscribe" title="Click to go to Subscribe section">Subscribe</a>
       </li>
     </ul>
   </div>
 </section>
+<script src="scripts/script.js"></script>
 </body>
 </html>
