fix: changed the button to a link

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <img class="header__image header__image_type_tablet" src="images/photo-header-tablet.jpg"
          alt="Photo of a man in a coat color dusty rose">
     <h1 class="header__title">Givenchy<br> Spring Summer 2021<br> by Matthew M. Williams</h1>
-    <button class="header__button">Subscribe to collection’s news</button>
+    <a class="header__button" href="#subscribe" title="Click to go to Subscribe section">Subscribe to collection’s news</a>
     <div class="header__menu">
       <button class="header__menu-button"></button>
       <p class="header__menu-title">menu</p>
