refactor: made reformat code

--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>GIVENCHY SPRING SUMMER 2021</title>
-    <link href="page/index.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <title>GIVENCHY SPRING SUMMER 2021</title>
+  <link href="page/index.css" rel="stylesheet">
 </head>
 <body class="page">
 <header class="header">
   <div class="header__container">
-    <img class="header__image" src="images/photo-header.jpg" alt="Photo of a man in a coat color dusty rose">
-    <img class="header__image header__image_type_tablet" src="images/photo-header-tablet.jpg"
-         alt="Photo of a man in a coat color dusty rose">
+    <img alt="Photo of a man in a coat color dusty rose" class="header__image" src="images/photo-header.jpg">
+    <img alt="Photo of a man in a coat color dusty rose" class="header__image header__image_type_tablet"
+         src="images/photo-header-tablet.jpg">
     <h1 class="header__title">Givenchy<br> Spring Summer 2021<br> by Matthew M. Williams</h1>
-    <a class="header__button" href="#subscribe" title="Click to go to Subscribe section">Subscribe to collection’s news</a>
+    <a class="header__button" href="#subscribe" title="Click to go to Subscribe section">Subscribe to collection’s
+      news</a>
     <div class="header__menu">
       <button class="header__menu-button"></button>
       <p class="header__menu-title">menu</p>
@@ -31,32 +32,36 @@
       <div class="about__quote fade-in-right">
         <blockquote class="about__quote-text">“To me, fashion expresses a point of view where formality and
           informality,
-        construction and comfort co-exist. My ethos is about the luxury of infusing clothes with your own personality,
-        not being worn by them,”
+          construction and comfort co-exist. My ethos is about the luxury of infusing clothes with your own personality,
+          not being worn by them,”
         </blockquote>
         <p class="about__quote-author fadeInLeft">Matthew M. Williams.</p>
       </div>
-      <img class="about__image about__image_type_medium fade-in-left" src="./images/photo-1.jpg"
-           alt="Photo of a woman in red with a bag of gold color">
+      <img alt="Photo of a woman in red with a bag of gold color"
+           class="about__image about__image_type_medium fade-in-left"
+           src="./images/photo-1.jpg">
     </article>
     <article class="about__item">
-      <p class="about__text fade-in-right">Matthew M. Williams reveals his vision with help from an all-star lineup of likeminded
+      <p class="about__text fade-in-right">Matthew M. Williams reveals his vision with help from an all-star lineup of
+        likeminded
         artists. The Creative Director called on close friends in his tight-knit community of artists. Kendall Jenner,
         Bella Hadid, Playboi Carti and the supermodels Anok Yai and Liam Powers were each invited to put their own stamp
         on key pieces, the better to highlight the importance of cultivating a powerful personal style.
       </p>
-      <img class="about__image about__image_type_small fade-in-left" src="./images/photo-2.jpg"
-           alt="Photo of a man in black with a big black bag">
+      <img alt="Photo of a man in black with a big black bag" class="about__image about__image_type_small fade-in-left"
+           src="./images/photo-2.jpg">
     </article>
     <article class="about__item">
       <div class="about__quote fade-in-right">
-        <blockquote class="about__quote-text">“In each of these portraits, a strong character wears a look that reflects who
-        they are: they’re the ones who bring the clothes to life.”
+        <blockquote class="about__quote-text">“In each of these portraits, a strong character wears a look that reflects
+          who
+          they are: they’re the ones who bring the clothes to life.”
         </blockquote>
         <p class="about__quote-author">Matthew M. Williams.</p>
       </div>
-      <img class="about__image about__image_type_large fade-in-left" src="./images/photo-3.jpg"
-           alt="Photo of a woman in a beige dress with cutouts on the back and elbows">
+      <img alt="Photo of a woman in a beige dress with cutouts on the back and elbows"
+           class="about__image about__image_type_large fade-in-left"
+           src="./images/photo-3.jpg">
     </article>
   </section>
   <section class="cards" id="looks">
@@ -71,27 +76,32 @@
       <img alt="Photo of a girl in a light pink coat on an orange background" class="cards__item"
            src="./images/photo-8.jpg">
       <img alt="Photo of a girl in black on a red background" class="cards__item" src="./images/photo-9.jpg">
-      <img alt="Photo of a girl in a green sweater, transparent skirt and red leggings on a sandy background" class="cards__item"
+      <img alt="Photo of a girl in a green sweater, transparent skirt and red leggings on a sandy background"
+           class="cards__item"
            src="images/photo-10.jpg">
-      <img alt="Photo of a girl in black pants, a white T-shirt and a black clutch on a blue background" class="cards__item"
+      <img alt="Photo of a girl in black pants, a white T-shirt and a black clutch on a blue background"
+           class="cards__item"
            src="images/photo-11.jpg">
     </div>
   </section>
 </main>
 <footer class="footer" id="subscribe">
   <div class="footer__container">
-    <p class="footer__text">Subscribe to the newsletterand be the first to know about new collection’s drop date and news</p>
-    <form class="footer__form" action="#" name="footer-form">
+    <p class="footer__text">Subscribe to the newsletterand be the first to know about new collection’s drop date and
+      news</p>
+    <form action="#" class="footer__form" name="footer-form">
       <div class="footer__form-item footer__form-item_type_mobile">
-        <input class="footer__form-input" id="email" name="email" type="email" placeholder="Eneter your email  here"
-                required autocomplete="off">
+        <input autocomplete="off" class="footer__form-input" id="email" name="email"
+               placeholder="Eneter your email  here"
+               required type="email">
         <button class="footer__button" type="submit">Submit</button>
       </div>
       <div class="footer__form-item">
         <input class="footer__form-input footer__form-input_type_checkbox" id="confirm-subscription"
-                 name="confirm-subscription" type="checkbox" value="confirm subscription" required>
+               name="confirm-subscription" required type="checkbox" value="confirm subscription">
         <label class="footer__form-label"
-               for="confirm-subscription">I consent to the processing of my data by GIVENCHY in accordance with the conditions set forth in the Privacy Policy
+               for="confirm-subscription">I consent to the processing of my data by GIVENCHY in accordance with the
+          conditions set forth in the Privacy Policy
         </label>
       </div>
     </form>
@@ -103,7 +113,7 @@
     <button class="popup__close" type="submit" value="close"></button>
     <ul class="popup__menu-list">
       <li class="popup__menu-item">
-        <a class="popup__menu-link" title="Click to go to About section" href="#about">About</a>
+        <a class="popup__menu-link" href="#about" title="Click to go to About section">About</a>
       </li>
       <li class="popup__menu-item">
         <a class="popup__menu-link" href="#looks" title="Click to go to Look section">Looks</a>
