fix: added variables

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 </footer>
 <section class="popup popup_type_menu">
   <div class="popup__container">
-    <button class="popup__close" type="submit" value="close"></button>
+    <button class="popup__close" type="button" value="close"></button>
     <ul class="popup__menu-list">
       <li class="popup__menu-item">
         <a class="popup__menu-link" href="#about" title="Click to go to About section">About</a>
